--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -282,12 +282,13 @@ hr {
   color: white;
 }
 
+/* First grid for container props */
 .grid-container {
   display: grid;
   grid-gap: 6px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, auto);
-  grid-auto-flow: column;
+  /* grid-auto-flow: column; */
   height: 50vh;
   background: #fff;
 }
@@ -312,4 +313,45 @@ button {
   border-radius: .5rem;
   padding: .5rem 1rem;
   font-size: 1.5rem;
+}
+
+/* Second grid for slide on grid areas */
+.grid-container-two {
+  display: grid;
+  grid-gap: 6px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, auto);
+  grid-template-areas:
+    "header header header"
+    "main main sidebar"
+    "main main sidebar"
+    "footer footer footer";
+  height: 50vh;
+  background: #fff;
+}
+
+.new-grid-item {
+  width: 100%;
+  height: 100%;
+  background: rgb(65, 173, 255);
+}
+
+.item-a {
+  grid-area: header;
+  background: lightyellow;
+}
+
+.item-b {
+  grid-area: main;
+  background: lightblue;
+}
+
+.item-c {
+  grid-area: sidebar;
+  background: antiquewhite;
+}
+
+.item-d {
+  grid-area: footer;
+  background: lightcoral;
 }
